--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -6,3 +6,55 @@ Medium green: #55c57a
 Dark green: #28b485
 
 */
+
+/* Reset settings default in browser */
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	font-family: "Lato", sans-serif;
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 1.7;
+	color: #777;
+	padding: 30px;
+}
+
+.header {
+	height: 95vh;
+	background-image: linear-gradient(to right bottom, #7ed56fb0, #55c57a9d),
+		url(../img/hero.jpg);
+	background-size: cover;
+	background-position: top;
+	clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+	/* parent of .logo-box */
+	position: relative;
+}
+
+.logo-box {
+	/* child of .header */
+	position: absolute;
+	top: 40px;
+	left: 40px;
+}
+
+.logo {
+	height: 40px;
+}
+
+.heading-primary {
+	color: #fff;
+	text-transform: uppercase;
+}
+
+.heading-primary-main {
+	display: block;
+}
+
+.heading-primary-sub {
+	display: block;
+}
